Finalizando o js + inicio css

--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
-<h1>Teste seus conhecimentos</h1>
+<head>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+</head>
 
-<div id="quiz"></div>
+<main>
+  <h1>Teste seus conhecimentos</h1>
 
-<template>
-  <div class="quiz-item">
-    <h3>
-      Pergunta 01
-    </h3>
-    <dl>
-      <dt>
-        <input type="radio" name="item" value="0">
-        <span>
-          Resposta A
-        </span>
-      </dt>
-    </dl>
+  <div id="quiz"></div>
+
+  <template>
+    <div class="quiz-item">
+      <h3>
+        Pergunta 01
+      </h3>
+      <dl>
+        <dt>
+          <input type="radio" name="item" value="0">
+          <span>
+            Resposta A
+          </span>
+        </dt>
+      </dl>
+    </div>
+  </template>
+
+  <div id="acertos">
+    <strong>Acertos</strong>
+    <span>0 de 10</span>
   </div>
-</template>
+</main>
