--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
       <strong>Acertos</strong>
       <span>0 de 10</span>
     </div>
+    <script src="./script.js"></script>
   </main>
 </body>
